# bootcamp

./: CMakeLists.txt  README.md  package.xml
roscpp_tutorial/: CMakeLists.txt  package.xml
roscpp_tutorial/001_cpp_listener_publisher/src/: pub.cpp
rospy_tutorial/: CMakeLists.txt  package.xml
rospy_tutorial/001_python_listener_publisher/scripts/: pub.py  sub.py
rospy_tutorial/002_custom_python_listener_publisher/scripts/: custom_msg_pub.py  custom_msg_sub.py
rospy_tutorial/003_python_listener_publisher_class/scripts/: pub_class.py  sub_class.py
rospy_tutorial/turtle_pub/: CMakeLists.txt  package.xml  turtle_pub.py
turtle_examples/: CMakeLists.txt  package.xml
turtle_examples/launch/: turtlesim.launch
turtle_examples/scripts/: question_1_lecture_2.txt
turtlesim_teleop/: CMakeLists.txt  README.md  package.xml
turtlesim_teleop/controllers/drive_controller/: drive_controller.py
turtlesim_teleop/launch/: launch_world.launch
turtlesim_teleop/src/: direction_publisher.py  package.xml
turtlesim_teleop/worlds/: .area.wbproj  area.wbt
webots_turtlebot3_examples/: CMakeLists.txt  package.xml
webots_turtlebot3_examples/config/: diff_drive.yaml
webots_turtlebot3_examples/controllers/turtlebot3_ostacle_avoidance/: turtlebot3_ostacle_avoidance
webots_turtlebot3_examples/docs/: proto_to_urdf.md  urdft_to_proto.md
webots_turtlebot3_examples/launch/: turtlebot3.launch  turtlebot3_teleop.launch
webots_turtlebot3_examples/meshes/: burger_base_scaled.stl  lds_converted.stl  left_tire_converted.stl  right_tire_converted.stl
webots_turtlebot3_examples/protos/: Tb3BurgerConverted.proto  tb3_camera.proto
webots_turtlebot3_examples/rviz/: default.rviz
webots_turtlebot3_examples/scripts/: import_test.py  map.pgm  map.yaml  teleop.py
webots_turtlebot3_examples/urdf/: example.xacro  turtlebot.xacro
webots_turtlebot3_examples/worlds/: .turtlebot3_burger.wbproj  turtlebot3_burger.wbt
webots_turtlebot3_navigation/: CMakeLists.txt  package.xml
webots_turtlebot3_navigation/launch/: amcl.launch  move_base.launch  navigation.launch
webots_turtlebot3_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml
webots_turtlebot3_navigation/rviz/: webots_navigation.rviz
webots_turtlebot3_navigation/yaml/: nav_points.yaml
webots_turtlebot3_slam/: CMakeLists.txt  package.xml
webots_turtlebot3_slam/config/: tb3_lds_2d.lua
webots_turtlebot3_slam/launch/: tb3_cartographer.launch
webots_turtlebot3_slam/maps/: map.pgm  map.yaml
webots_turtlebot3_slam/rviz/: tb3_cartographer.rviz
